<resources>
    <string name="app_name">Meld</string>v
    <string name="banner">Meld ␥</string>
    <string name="found_spotify">Spotify Account Linked</string>
    <string name="found_youtube">YouTube Account Linked</string>

    <string name="title_home">Home</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_friend_playlists">Friend Playlists</string>
    <string name="title_playlist_share">Share Playlists</string>


    <string name="title_friends">Friends</string>

    <string name="title_tracks">Tracks</string>

    <string name="prompt_email">username (not email)</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or sign up</string>
    <string name="action_sign_in_short">Sign in</string>

</resources>
