<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <activity
        android:id="@+id/navigation_home"
        android:name="com.example.meld.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.example.meld.ui.dashboard.PlaylistFragment"
        android:label="@string/title_playlists"
        tools:layout="@layout/fragment_playlists" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.meld.ui.notifications.NotificationsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_notifications" />
</navigation>
