<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:text="@string/banner"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/found_spotify_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline"
        android:weightSum="4"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_found_spotify"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="3"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/found_spotify"
            android:textSize="20sp"
            android:layout_marginBottom="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/spotify_button_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline"
        android:weightSum="4"
        android:visibility="visible">


        <Button
            android:id="@+id/spotify_login_button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/black"
            android:layout_centerInParent="true"
            android:text="Link Spotify Account"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
            android:layout_marginBottom="80dp"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/found_youtube_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline"
        android:weightSum="4"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_found_youtube"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="3"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/found_youtube"
            android:textSize="20sp"
            android:layout_marginBottom="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/youtube_button_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline"
        android:weightSum="4">

        <Button
            android:id="@+id/youtube_login_button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="2"
            android:background="@android:color/holo_red_light"
            android:textColor="@android:color/white"
            android:layout_gravity="top"
            android:layout_centerInParent="true"
            android:text="Link YouTube Account"
            style="@style/Widget.AppCompat.Button.Colored"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="4">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="64dp"
            android:visibility="invisible"
            android:layout_weight="3"
            app:layout_constraintVertical_bias="0.3" />


    </LinearLayout>



    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <androidx.constraintlayout.widget.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/vertical_guideline"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73"/>

<!--    <Button-->
<!--        android:id="@+id/go_to_playlists_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="Go to Playlists"-->
<!--        style="@style/Widget.AppCompat.Button.Colored"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/spotify_login_button"-->
<!--        app:layout_constraintStart_toEndOf="@id/spotify_login_button"-->
<!--        android:visibility="invisible"-->
<!--        android:layout_marginTop="100dp"/>-->

<!--    <Button-->
<!--        android:id="@+id/get_spotify_data_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="Get Spotify User Data"-->
<!--        style="@style/Widget.AppCompat.Button.Colored"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/get_spotify_playlist_button"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:visibility="invisible"-->
<!--        android:layout_marginTop="20dp"/>-->

<!--    <Button-->
<!--        android:id="@+id/log_playlist_object_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="Log Playlist Data"-->
<!--        style="@style/Widget.AppCompat.Button.Colored"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/spotify_login_button"-->
<!--        app:layout_constraintStart_toEndOf="@id/spotify_login_button"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginLeft="10dp"/>-->


<!--    <Button-->
<!--        android:id="@+id/youtube_login_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="Login to Youtube"-->
<!--        style="@style/Widget.AppCompat.Button.Colored"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/log_playlist_object_button"-->
<!--        app:layout_constraintStart_toEndOf="@id/get_spotify_playlist_button"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginLeft="10dp"/>-->

<!--    <Button-->
<!--        android:id="@+id/youtube_playlist_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="Get Youtube Playlists"-->
<!--        style="@style/Widget.AppCompat.Button.Colored"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/youtube_login_button"-->
<!--        app:layout_constraintStart_toEndOf="@id/get_spotify_data_button"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginLeft="10dp"/>-->


<!--    <Button-->
<!--        android:id="@+id/nav_to_playlists_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="Go to Playlists"-->
<!--        style="@style/Widget.AppCompat.Button.Colored"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/youtube_playlist_button"-->
<!--        app:layout_constraintStart_toEndOf="@id/get_spotify_data_button"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginLeft="10dp"/>-->


<!--    <TextView-->
<!--        android:id=""-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

</androidx.constraintlayout.widget.ConstraintLayout>